--- a/index.html
+++ b/index.html
@@ -22,118 +22,313 @@
         alt="Logotipo da HZC"
         class="cabecalho__logo"
       />
+      <p class="cabecalho__perfil">Holivane Holanda</p>
       <button class="cabecalho__notificacao" aria-label="Notificação">
         <i></i>
       </button>
     </header>
     <nav class="menu-lateral">
-      <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="menu-lateral__logo" />
-      <a href="#" class="menu-lateral__link menu-lateral__link--inicio menu-lateral__link--ativo">Início</a>
-      <a href="#" class="menu-lateral__link menu-lateral__link--videos">Vídeos</a>
+      <img
+        src="assets/img/logo.svg"
+        alt="Logotipo da HZC"
+        class="menu-lateral__logo"
+      />
+      <a
+        href="#"
+        class="menu-lateral__link menu-lateral__link--inicio menu-lateral__link--ativo"
+        >Início</a
+      >
+      <a href="#" class="menu-lateral__link menu-lateral__link--videos"
+        >Vídeos</a
+      >
       <a href="#" class="menu-lateral__link menu-lateral__link--picos">Picos</a>
-      <a href="#" class="menu-lateral__link menu-lateral__link--integrantes">Integrantes</a>
-      <a href="#" class="menu-lateral__link menu-lateral__link--camisas">Camisas</a>
-      <a href="#" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
+      <a href="#" class="menu-lateral__link menu-lateral__link--integrantes"
+        >Integrantes</a
+      >
+      <a href="#" class="menu-lateral__link menu-lateral__link--camisas"
+        >Camisas</a
+      >
+      <a href="#" class="menu-lateral__link menu-lateral__link--pinturas"
+        >Pinturas</a
+      >
     </nav>
     <main class="principal">
       <h2 class="titulo-pagina">Início</h2>
       <article class="cartao cartao--destaque">
-        <img src="assets/img/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem">
+        <img
+          src="assets/img/banner-mobile_1.png"
+          alt="Banner do cartão"
+          class="cartao__imagem"
+        />
         <div class="cartao__conteudo">
           <p class="cartao__destaque">Video em destaque</p>
           <p class="cartao__titulo">HZC - Título</p>
           <p class="cartao__perfil">Holivane Holanda</p>
           <p class="cartao__info cartao__info--tempo">33 minutos</p>
-          <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
-          <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
+          <p class="cartao__info cartao__info--visualizacao">
+            33 visualizações
+          </p>
+          <button
+            class="cartao__botao cartao__botao--play cartao__botao--destaque"
+          >
+            Assistir agora
+          </button>
         </div>
+      </article>
+      <article class="cartao cartao--recentes">
+        <h3 class="cartao__titulo">Videos recentes</h3>
+        <a href="#" class="cartao__link">Ver todos</a>
+        <ul class="cartao__lista">
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item--thumbnail"
+            />
+            <h4 class="cartao__item--titulo">HZC - Love machine</h4>
+            <p class="cartao__item--perfil">Holivane Holanda</p>
+          </li>
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item--thumbnail"
+            />
+            <h4 class="cartao__item--titulo">HZC - Love machine</h4>
+            <p class="cartao__item--perfil">Holivane Holanda</p>
+          </li>
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item--thumbnail"
+            />
+            <h4 class="cartao__item--titulo">HZC - Love machine</h4>
+            <p class="cartao__item--perfil">Holivane Holanda</p>
+          </li>
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item--thumbnail"
+            />
+            <h4 class="cartao__item--titulo">HZC - Love machine</h4>
+            <p class="cartao__item--perfil">Holivane Holanda</p>
+          </li>
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item--thumbnail"
+            />
+            <h4 class="cartao__item--titulo">HZC - Love machine</h4>
+            <p class="cartao__item--perfil">Holivane Holanda</p>
+          </li>
+        </ul>
       </article>
       <section class="secao">
         <h3 class="titulo-secao">Videos mais vistos</h3>
         <article class="cartao">
-          <img src="assets/img/video_1.png" alt="Video" class="cartao__imagem">
+          <img
+            src="assets/img/video_1.png"
+            alt="Video"
+            class="cartao__imagem"
+          />
           <div class="cartao__conteudo">
             <p class="cartao__perfil">Holivane Holanda</p>
             <p class="cartao__titulo">HZC - Título</p>
             <p class="cartao__info cartao__info--tempo">33 minutos</p>
-            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+            <button
+              class="cartao__botao cartao__botao--play"
+              aria-label="Assistir agora"
+            ></button>
           </div>
         </article>
         <article class="cartao">
-          <img src="assets/img/video_1.png" alt="Video" class="cartao__imagem">
+          <img
+            src="assets/img/video_1.png"
+            alt="Video"
+            class="cartao__imagem"
+          />
           <div class="cartao__conteudo">
             <p class="cartao__perfil">Holivane Holanda</p>
             <p class="cartao__titulo">HZC - Título</p>
             <p class="cartao__info cartao__info--tempo">33 minutos</p>
-            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+            <button
+              class="cartao__botao cartao__botao--play"
+              aria-label="Assistir agora"
+            ></button>
           </div>
         </article>
         <article class="cartao">
-          <img src="assets/img/video_1.png" alt="Video" class="cartao__imagem">
+          <img
+            src="assets/img/video_1.png"
+            alt="Video"
+            class="cartao__imagem"
+          />
           <div class="cartao__conteudo">
             <p class="cartao__perfil">Holivane Holanda</p>
             <p class="cartao__titulo">HZC - Título</p>
             <p class="cartao__info cartao__info--tempo">33 minutos</p>
-            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+            <button
+              class="cartao__botao cartao__botao--play"
+              aria-label="Assistir agora"
+            ></button>
           </div>
         </article>
         <article class="cartao">
-          <img src="assets/img/video_1.png" alt="Video" class="cartao__imagem">
+          <img
+            src="assets/img/video_1.png"
+            alt="Video"
+            class="cartao__imagem"
+          />
           <div class="cartao__conteudo">
             <p class="cartao__perfil">Holivane Holanda</p>
             <p class="cartao__titulo">HZC - Título</p>
             <p class="cartao__info cartao__info--tempo">33 minutos</p>
-            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+            <button
+              class="cartao__botao cartao__botao--play"
+              aria-label="Assistir agora"
+            ></button>
           </div>
         </article>
       </section>
+      <article class="cartao cartao--recentes">
+        <h3 class="cartao__titulo">Videos recentes</h3>
+        <a href="#" class="cartao__link">Ver todos</a>
+        <ul class="cartao__lista">
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item--thumbnail"
+            />
+            <h4 class="cartao__item--titulo">HZC - Love machine</h4>
+            <p class="cartao__item--perfil">Holivane Holanda</p>
+          </li>
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item--thumbnail"
+            />
+            <h4 class="cartao__item--titulo">HZC - Love machine</h4>
+            <p class="cartao__item--perfil">Holivane Holanda</p>
+          </li>
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item--thumbnail"
+            />
+            <h4 class="cartao__item--titulo">HZC - Love machine</h4>
+            <p class="cartao__item--perfil">Holivane Holanda</p>
+          </li>
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item--thumbnail"
+            />
+            <h4 class="cartao__item--titulo">HZC - Love machine</h4>
+            <p class="cartao__item--perfil">Holivane Holanda</p>
+          </li>
+          <li class="cartao__item">
+            <img
+              src="assets/img/miniatura_1.png"
+              alt="Thumbnail"
+              class="cartao__item--thumbnail"
+            />
+            <h4 class="cartao__item--titulo">HZC - Love machine</h4>
+            <p class="cartao__item--perfil">Holivane Holanda</p>
+          </li>
+        </ul>
+      </article>
       <article class="cartao cartao--destaque">
-        <img src="assets/img/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem">
+        <img
+          src="assets/img/banner-mobile_1.png"
+          alt="Banner do cartão"
+          class="cartao__imagem"
+        />
         <div class="cartao__conteudo">
           <p class="cartao__destaque">Video em destaque</p>
           <p class="cartao__titulo">HZC - Título</p>
           <p class="cartao__perfil">Holivane Holanda</p>
           <p class="cartao__info cartao__info--tempo">33 minutos</p>
-          <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
-          <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
+          <p class="cartao__info cartao__info--visualizacao">
+            33 visualizações
+          </p>
+          <button
+            class="cartao__botao cartao__botao--play cartao__botao--destaque"
+          >
+            Assistir agora
+          </button>
         </div>
       </article>
       <section class="secao">
         <h3 class="titulo-secao">Videos mais vistos</h3>
         <article class="cartao">
-          <img src="assets/img/video_1.png" alt="Video" class="cartao__imagem">
+          <img
+            src="assets/img/video_1.png"
+            alt="Video"
+            class="cartao__imagem"
+          />
           <div class="cartao__conteudo">
             <p class="cartao__perfil">Holivane Holanda</p>
             <p class="cartao__titulo">HZC - Título</p>
             <p class="cartao__info cartao__info--tempo">33 minutos</p>
-            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+            <button
+              class="cartao__botao cartao__botao--play"
+              aria-label="Assistir agora"
+            ></button>
           </div>
         </article>
         <article class="cartao">
-          <img src="assets/img/video_1.png" alt="Video" class="cartao__imagem">
+          <img
+            src="assets/img/video_1.png"
+            alt="Video"
+            class="cartao__imagem"
+          />
           <div class="cartao__conteudo">
             <p class="cartao__perfil">Holivane Holanda</p>
             <p class="cartao__titulo">HZC - Título</p>
             <p class="cartao__info cartao__info--tempo">33 minutos</p>
-            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+            <button
+              class="cartao__botao cartao__botao--play"
+              aria-label="Assistir agora"
+            ></button>
           </div>
         </article>
         <article class="cartao">
-          <img src="assets/img/video_1.png" alt="Video" class="cartao__imagem">
+          <img
+            src="assets/img/video_1.png"
+            alt="Video"
+            class="cartao__imagem"
+          />
           <div class="cartao__conteudo">
             <p class="cartao__perfil">Holivane Holanda</p>
             <p class="cartao__titulo">HZC - Título</p>
             <p class="cartao__info cartao__info--tempo">33 minutos</p>
-            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+            <button
+              class="cartao__botao cartao__botao--play"
+              aria-label="Assistir agora"
+            ></button>
           </div>
         </article>
         <article class="cartao">
-          <img src="assets/img/video_1.png" alt="Video" class="cartao__imagem">
+          <img
+            src="assets/img/video_1.png"
+            alt="Video"
+            class="cartao__imagem"
+          />
           <div class="cartao__conteudo">
             <p class="cartao__perfil">Holivane Holanda</p>
             <p class="cartao__titulo">HZC - Título</p>
             <p class="cartao__info cartao__info--tempo">33 minutos</p>
-            <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+            <button
+              class="cartao__botao cartao__botao--play"
+              aria-label="Assistir agora"
+            ></button>
           </div>
         </article>
       </section>
