--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </nav>
     <main class="principal">
       <h2 class="titulo-pagina">Início</h2>
-      <article class="cartao cartao--destaque">
+      <article class="cartao cartao--destaque destaque-video">
         <img
           src="assets/img/banner-mobile_1.png"
           alt="Banner do cartão"
@@ -75,7 +75,7 @@
           </button>
         </div>
       </article>
-      <article class="cartao cartao--recentes">
+      <article class="cartao cartao--recentes videos-recentes">
         <h3 class="cartao__titulo">Videos recentes</h3>
         <a href="#" class="cartao__link">Ver todos</a>
         <ul class="cartao__lista">
@@ -126,7 +126,7 @@
           </li>
         </ul>
       </article>
-      <section class="secao">
+      <section class="secao secao-videos">
         <h3 class="titulo-secao">Videos mais vistos</h3>
         <article class="cartao">
           <img
@@ -193,7 +193,7 @@
           </div>
         </article>
       </section>
-      <article class="cartao cartao--recentes">
+      <article class="cartao cartao--recentes produtos-recentes">
         <h3 class="cartao__titulo">Videos recentes</h3>
         <a href="#" class="cartao__link">Ver todos</a>
         <ul class="cartao__lista">
@@ -244,7 +244,7 @@
           </li>
         </ul>
       </article>
-      <article class="cartao cartao--destaque">
+      <article class="cartao cartao--destaque destaque-produtos">
         <img
           src="assets/img/banner-mobile_1.png"
           alt="Banner do cartão"
@@ -265,7 +265,7 @@
           </button>
         </div>
       </article>
-      <section class="secao">
+      <section class="secao secao-produtos">
         <h3 class="titulo-secao">Videos mais vistos</h3>
         <article class="cartao">
           <img
