--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </div>
       </article>
       <section class="secao secao-produtos">
-        <h3 class="titulo-secao">Videos mais vistos</h3>
+        <h3 class="titulo-secao">Camisas mais recentes</h3>
         <article class="cartao">
           <img src="assets/img/produto_1.png" alt="Video" class="cartao__imagem" />
           <div class="cartao__conteudo">
